# scicomp-p2-asteroids-river

./: .gitignore  README.md  import_and_partition_data.py  main.ipynb  main.py  presentation_planning.md  pyproject.toml  requirements.txt  slurm-array-param-sweep.sh
common/: classificationscorer.py  datasets.py  familyclassifier.py  familynames.py  inputs.py
common/classifiers/: __init__.py  dbscan.py  dbscan_3param.py  dbscan_3param_norm.py  hdbscan.py  hdbscan_3param_norm.py  kmeans.py
data/: family_membership_test.csv  family_membership_validate.csv
steps/: 00_download_data.py  01_import_and_partition_data.py  10_single_cluster.py  12_plot_single_run.py  20_parameter_sweep.py  21_concat_sweep_results.py  25_plot_sweep_results.py
tests/: test_classificationscorer.py
