[project]
name = "scicomp-p2-asteroids-river"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
